--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Frago</title</head>
+    <title>Abados</title</head>
 <body>
     <header>
         <nav>
@@ -18,7 +18,7 @@
     </header>
 
     <section id="home" class="hero">
-        <h1>Baham Gullos</h1>
+        <h1>Kenjay Christian E. Abados</h1>
         <p>Web Developer & Designer</p>
         <a href="#portfolio" class="cta-button">View My Work</a>
     </section>
@@ -45,7 +45,7 @@
 
     <section id="contact" class="contact">
         <h2>Contact Me</h2>
-        <p>Feel free to get in touch. genfrago@gmail.com</p>
+        <p>Feel free to get in touch. 201940243@psu.palawan.edu.ph</p>
     </section>
 
     <footer>
