modify about me

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <section id="about" class="about">
         <h2>About Me</h2>
-        <p>hacker</p>
+        <p>Hi there! I'm someone who's passionate about learning and growing in the world of backend development.</p>
     </section>
 
     <section id="portfolio" class="portfolio">
