modify 1 project and description

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Abados</title</head>
+    <title>Abados</title></head>
 <body>
     <header>
         <nav>
@@ -32,8 +32,8 @@
         <h2>Portfolio</h2>
         <div class="portfolio-item">
             <img src="img/img1.jpg" alt="Project 1">
-            <h3>Project 1</h3>
-            <p>Description of Project 1...</p>
+            <h3>Bgy. Irawan Assistance Information Management System with SMS Notificatio for Elderly, PWD and Pregnant Women</h3>
+            <p>The Bgy. Irawan Assistance Information Management System is a platform designed to support the elderly, persons with disabilities (PWD), and pregnant women by streamlining assistance services. It features an SMS notification system to keep recipients informed about important updates, services, and support available to them, ensuring they receive timely and relevant information. This system aims to enhance community care and improve access to essential services.</p>
         </div>
         <div class="portfolio-item">
             <img src="img/img1.jpg" alt="Project 2">
